// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`file list snapshots > azure + bicep 1`] = `
[
  ".claude/rules/git-workflow.md",
  ".claude/settings.json",
  ".claude/skills/commit-conventions/SKILL.md",
  ".claude/skills/commit/SKILL.md",
  ".claude/skills/implement/SKILL.md",
  ".claude/skills/lint-rules/SKILL.md",
  ".claude/skills/lint/SKILL.md",
  ".claude/skills/pr/SKILL.md",
  ".claude/skills/review/SKILL.md",
  ".claude/skills/setup/SKILL.md",
  ".claude/skills/ship/SKILL.md",
  ".claude/skills/test/SKILL.md",
  ".commitlintrc.yaml",
  ".devcontainer/Dockerfile",
  ".devcontainer/devcontainer.json",
  ".devcontainer/initialize.sh",
  ".devcontainer/post-create.sh",
  ".dockerignore",
  ".editorconfig",
  ".env.example",
  ".gitattributes",
  ".github/CODEOWNERS",
  ".github/pull_request_template.md",
  ".github/rulesets/protect-main.json",
  ".github/workflows/cd-bicep.yaml",
  ".github/workflows/ci.yaml",
  ".gitignore",
  ".hadolint.yaml",
  ".markdownlint-cli2.yaml",
  ".mcp.json",
  ".mcp.json.example",
  ".mdformat.toml",
  ".mise.toml",
  ".npmrc",
  ".vscode/extensions.json",
  ".vscode/settings.json",
  ".yamlfmt.yaml",
  ".yamllint.yaml",
  "CLAUDE.md",
  "README.md",
  "bicepconfig.json",
  "biome.json",
  "docs/adding-tools.md",
  "docs/branch-strategy.md",
  "infra/main.bicep",
  "lefthook.yaml",
  "package.json",
  "renovate.json",
  "scripts/apply-rulesets.sh",
  "scripts/configure-repo.sh",
  "scripts/setup.sh",
  "src/index.ts",
  "tests/index.test.ts",
  "tsconfig.json",
]
`;

exports[`file list snapshots > base only 1`] = `
[
  ".claude/rules/git-workflow.md",
  ".claude/settings.json",
  ".claude/skills/commit-conventions/SKILL.md",
  ".claude/skills/commit/SKILL.md",
  ".claude/skills/implement/SKILL.md",
  ".claude/skills/lint-rules/SKILL.md",
  ".claude/skills/lint/SKILL.md",
  ".claude/skills/pr/SKILL.md",
  ".claude/skills/review/SKILL.md",
  ".claude/skills/setup/SKILL.md",
  ".claude/skills/ship/SKILL.md",
  ".claude/skills/test/SKILL.md",
  ".commitlintrc.yaml",
  ".devcontainer/Dockerfile",
  ".devcontainer/devcontainer.json",
  ".devcontainer/initialize.sh",
  ".devcontainer/post-create.sh",
  ".dockerignore",
  ".editorconfig",
  ".env.example",
  ".gitattributes",
  ".github/CODEOWNERS",
  ".github/pull_request_template.md",
  ".github/rulesets/protect-main.json",
  ".github/workflows/ci.yaml",
  ".gitignore",
  ".hadolint.yaml",
  ".markdownlint-cli2.yaml",
  ".mcp.json",
  ".mcp.json.example",
  ".mdformat.toml",
  ".mise.toml",
  ".npmrc",
  ".vscode/extensions.json",
  ".vscode/settings.json",
  ".yamlfmt.yaml",
  ".yamllint.yaml",
  "CLAUDE.md",
  "README.md",
  "docs/adding-tools.md",
  "docs/branch-strategy.md",
  "lefthook.yaml",
  "package.json",
  "renovate.json",
  "scripts/apply-rulesets.sh",
  "scripts/configure-repo.sh",
  "scripts/setup.sh",
]
`;

exports[`file list snapshots > cdk 1`] = `
[
  ".cfnlintrc.yaml",
  ".claude/rules/git-workflow.md",
  ".claude/settings.json",
  ".claude/skills/commit-conventions/SKILL.md",
  ".claude/skills/commit/SKILL.md",
  ".claude/skills/implement/SKILL.md",
  ".claude/skills/lint-rules/SKILL.md",
  ".claude/skills/lint/SKILL.md",
  ".claude/skills/pr/SKILL.md",
  ".claude/skills/review/SKILL.md",
  ".claude/skills/setup/SKILL.md",
  ".claude/skills/ship/SKILL.md",
  ".claude/skills/test/SKILL.md",
  ".commitlintrc.yaml",
  ".devcontainer/Dockerfile",
  ".devcontainer/devcontainer.json",
  ".devcontainer/initialize.sh",
  ".devcontainer/post-create.sh",
  ".dockerignore",
  ".editorconfig",
  ".env.example",
  ".gitattributes",
  ".github/CODEOWNERS",
  ".github/pull_request_template.md",
  ".github/rulesets/protect-main.json",
  ".github/workflows/cd-cdk.yaml",
  ".github/workflows/ci.yaml",
  ".gitignore",
  ".hadolint.yaml",
  ".markdownlint-cli2.yaml",
  ".mcp.json",
  ".mcp.json.example",
  ".mdformat.toml",
  ".mise.toml",
  ".npmrc",
  ".vscode/extensions.json",
  ".vscode/settings.json",
  ".yamlfmt.yaml",
  ".yamllint.yaml",
  "CLAUDE.md",
  "README.md",
  "biome.json",
  "docs/adding-tools.md",
  "docs/branch-strategy.md",
  "infra/bin/app.ts",
  "infra/cdk.json",
  "infra/lib/app-stack.ts",
  "infra/package.json",
  "infra/test/app.test.ts",
  "infra/tsconfig.json",
  "lefthook.yaml",
  "package.json",
  "renovate.json",
  "scripts/apply-rulesets.sh",
  "scripts/configure-repo.sh",
  "scripts/setup.sh",
  "src/index.ts",
  "tests/index.test.ts",
  "tsconfig.json",
]
`;

exports[`file list snapshots > cloudformation (ts) 1`] = `
[
  ".cfnlintrc.yaml",
  ".claude/rules/git-workflow.md",
  ".claude/settings.json",
  ".claude/skills/commit-conventions/SKILL.md",
  ".claude/skills/commit/SKILL.md",
  ".claude/skills/implement/SKILL.md",
  ".claude/skills/lint-rules/SKILL.md",
  ".claude/skills/lint/SKILL.md",
  ".claude/skills/pr/SKILL.md",
  ".claude/skills/review/SKILL.md",
  ".claude/skills/setup/SKILL.md",
  ".claude/skills/ship/SKILL.md",
  ".claude/skills/test/SKILL.md",
  ".commitlintrc.yaml",
  ".devcontainer/Dockerfile",
  ".devcontainer/devcontainer.json",
  ".devcontainer/initialize.sh",
  ".devcontainer/post-create.sh",
  ".dockerignore",
  ".editorconfig",
  ".env.example",
  ".gitattributes",
  ".github/CODEOWNERS",
  ".github/pull_request_template.md",
  ".github/rulesets/protect-main.json",
  ".github/workflows/cd-cloudformation.yaml",
  ".github/workflows/ci.yaml",
  ".gitignore",
  ".hadolint.yaml",
  ".markdownlint-cli2.yaml",
  ".mcp.json",
  ".mcp.json.example",
  ".mdformat.toml",
  ".mise.toml",
  ".npmrc",
  ".vscode/extensions.json",
  ".vscode/settings.json",
  ".yamlfmt.yaml",
  ".yamllint.yaml",
  "CLAUDE.md",
  "README.md",
  "biome.json",
  "docs/adding-tools.md",
  "docs/branch-strategy.md",
  "infra/template.yaml",
  "lefthook.yaml",
  "package.json",
  "renovate.json",
  "scripts/apply-rulesets.sh",
  "scripts/configure-repo.sh",
  "scripts/setup.sh",
  "src/index.ts",
  "tests/index.test.ts",
  "tsconfig.json",
]
`;

exports[`file list snapshots > express + cdk 1`] = `
[
  ".cfnlintrc.yaml",
  ".claude/rules/express.md",
  ".claude/rules/git-workflow.md",
  ".claude/settings.json",
  ".claude/skills/commit-conventions/SKILL.md",
  ".claude/skills/commit/SKILL.md",
  ".claude/skills/implement/SKILL.md",
  ".claude/skills/lint-rules/SKILL.md",
  ".claude/skills/lint/SKILL.md",
  ".claude/skills/pr/SKILL.md",
  ".claude/skills/review/SKILL.md",
  ".claude/skills/setup/SKILL.md",
  ".claude/skills/ship/SKILL.md",
  ".claude/skills/test/SKILL.md",
  ".commitlintrc.yaml",
  ".devcontainer/Dockerfile",
  ".devcontainer/devcontainer.json",
  ".devcontainer/initialize.sh",
  ".devcontainer/post-create.sh",
  ".dockerignore",
  ".editorconfig",
  ".env.example",
  ".gitattributes",
  ".github/CODEOWNERS",
  ".github/pull_request_template.md",
  ".github/rulesets/protect-main.json",
  ".github/workflows/cd-cdk.yaml",
  ".github/workflows/ci.yaml",
  ".gitignore",
  ".hadolint.yaml",
  ".markdownlint-cli2.yaml",
  ".mcp.json",
  ".mcp.json.example",
  ".mdformat.toml",
  ".mise.toml",
  ".npmrc",
  ".vscode/extensions.json",
  ".vscode/settings.json",
  ".yamlfmt.yaml",
  ".yamllint.yaml",
  "CLAUDE.md",
  "README.md",
  "api/package.json",
  "api/src/app.ts",
  "api/src/index.ts",
  "api/tests/app.test.ts",
  "api/tsconfig.json",
  "biome.json",
  "docs/adding-tools.md",
  "docs/branch-strategy.md",
  "infra/bin/app.ts",
  "infra/cdk.json",
  "infra/lib/app-stack.ts",
  "infra/package.json",
  "infra/test/app.test.ts",
  "infra/tsconfig.json",
  "lefthook.yaml",
  "package.json",
  "pnpm-workspace.yaml",
  "renovate.json",
  "scripts/apply-rulesets.sh",
  "scripts/configure-repo.sh",
  "scripts/setup.sh",
  "src/index.ts",
  "tests/index.test.ts",
  "tsconfig.json",
]
`;

exports[`file list snapshots > express 1`] = `
[
  ".claude/rules/express.md",
  ".claude/rules/git-workflow.md",
  ".claude/settings.json",
  ".claude/skills/commit-conventions/SKILL.md",
  ".claude/skills/commit/SKILL.md",
  ".claude/skills/implement/SKILL.md",
  ".claude/skills/lint-rules/SKILL.md",
  ".claude/skills/lint/SKILL.md",
  ".claude/skills/pr/SKILL.md",
  ".claude/skills/review/SKILL.md",
  ".claude/skills/setup/SKILL.md",
  ".claude/skills/ship/SKILL.md",
  ".claude/skills/test/SKILL.md",
  ".commitlintrc.yaml",
  ".devcontainer/Dockerfile",
  ".devcontainer/devcontainer.json",
  ".devcontainer/initialize.sh",
  ".devcontainer/post-create.sh",
  ".dockerignore",
  ".editorconfig",
  ".env.example",
  ".gitattributes",
  ".github/CODEOWNERS",
  ".github/pull_request_template.md",
  ".github/rulesets/protect-main.json",
  ".github/workflows/ci.yaml",
  ".gitignore",
  ".hadolint.yaml",
  ".markdownlint-cli2.yaml",
  ".mcp.json",
  ".mcp.json.example",
  ".mdformat.toml",
  ".mise.toml",
  ".npmrc",
  ".vscode/extensions.json",
  ".vscode/settings.json",
  ".yamlfmt.yaml",
  ".yamllint.yaml",
  "CLAUDE.md",
  "README.md",
  "api/package.json",
  "api/src/app.ts",
  "api/src/index.ts",
  "api/tests/app.test.ts",
  "api/tsconfig.json",
  "biome.json",
  "docs/adding-tools.md",
  "docs/branch-strategy.md",
  "lefthook.yaml",
  "package.json",
  "pnpm-workspace.yaml",
  "renovate.json",
  "scripts/apply-rulesets.sh",
  "scripts/configure-repo.sh",
  "scripts/setup.sh",
  "src/index.ts",
  "tests/index.test.ts",
  "tsconfig.json",
]
`;

exports[`file list snapshots > fastapi + cdk 1`] = `
[
  ".cfnlintrc.yaml",
  ".claude/rules/fastapi.md",
  ".claude/rules/git-workflow.md",
  ".claude/settings.json",
  ".claude/skills/commit-conventions/SKILL.md",
  ".claude/skills/commit/SKILL.md",
  ".claude/skills/implement/SKILL.md",
  ".claude/skills/lint-rules/SKILL.md",
  ".claude/skills/lint/SKILL.md",
  ".claude/skills/pr/SKILL.md",
  ".claude/skills/review/SKILL.md",
  ".claude/skills/setup/SKILL.md",
  ".claude/skills/ship/SKILL.md",
  ".claude/skills/test/SKILL.md",
  ".commitlintrc.yaml",
  ".devcontainer/Dockerfile",
  ".devcontainer/devcontainer.json",
  ".devcontainer/initialize.sh",
  ".devcontainer/post-create.sh",
  ".dockerignore",
  ".editorconfig",
  ".env.example",
  ".gitattributes",
  ".github/CODEOWNERS",
  ".github/pull_request_template.md",
  ".github/rulesets/protect-main.json",
  ".github/workflows/cd-cdk.yaml",
  ".github/workflows/ci.yaml",
  ".gitignore",
  ".hadolint.yaml",
  ".markdownlint-cli2.yaml",
  ".mcp.json",
  ".mcp.json.example",
  ".mdformat.toml",
  ".mise.toml",
  ".npmrc",
  ".vscode/extensions.json",
  ".vscode/settings.json",
  ".yamlfmt.yaml",
  ".yamllint.yaml",
  "CLAUDE.md",
  "README.md",
  "api/pyproject.toml",
  "api/src/__init__.py",
  "api/src/main.py",
  "api/tests/__init__.py",
  "api/tests/test_main.py",
  "biome.json",
  "docs/adding-tools.md",
  "docs/branch-strategy.md",
  "infra/bin/app.ts",
  "infra/cdk.json",
  "infra/lib/app-stack.ts",
  "infra/package.json",
  "infra/test/app.test.ts",
  "infra/tsconfig.json",
  "lefthook.yaml",
  "package.json",
  "pyproject.toml",
  "renovate.json",
  "scripts/apply-rulesets.sh",
  "scripts/configure-repo.sh",
  "scripts/setup.sh",
  "src/index.ts",
  "tests/__init__.py",
  "tests/index.test.ts",
  "tests/test_placeholder.py",
  "tsconfig.json",
  "uv.lock",
]
`;

exports[`file list snapshots > fastapi 1`] = `
[
  ".claude/rules/fastapi.md",
  ".claude/rules/git-workflow.md",
  ".claude/settings.json",
  ".claude/skills/commit-conventions/SKILL.md",
  ".claude/skills/commit/SKILL.md",
  ".claude/skills/implement/SKILL.md",
  ".claude/skills/lint-rules/SKILL.md",
  ".claude/skills/lint/SKILL.md",
  ".claude/skills/pr/SKILL.md",
  ".claude/skills/review/SKILL.md",
  ".claude/skills/setup/SKILL.md",
  ".claude/skills/ship/SKILL.md",
  ".claude/skills/test/SKILL.md",
  ".commitlintrc.yaml",
  ".devcontainer/Dockerfile",
  ".devcontainer/devcontainer.json",
  ".devcontainer/initialize.sh",
  ".devcontainer/post-create.sh",
  ".dockerignore",
  ".editorconfig",
  ".env.example",
  ".gitattributes",
  ".github/CODEOWNERS",
  ".github/pull_request_template.md",
  ".github/rulesets/protect-main.json",
  ".github/workflows/ci.yaml",
  ".gitignore",
  ".hadolint.yaml",
  ".markdownlint-cli2.yaml",
  ".mcp.json",
  ".mcp.json.example",
  ".mdformat.toml",
  ".mise.toml",
  ".npmrc",
  ".vscode/extensions.json",
  ".vscode/settings.json",
  ".yamlfmt.yaml",
  ".yamllint.yaml",
  "CLAUDE.md",
  "README.md",
  "api/pyproject.toml",
  "api/src/__init__.py",
  "api/src/main.py",
  "api/tests/__init__.py",
  "api/tests/test_main.py",
  "docs/adding-tools.md",
  "docs/branch-strategy.md",
  "lefthook.yaml",
  "package.json",
  "pyproject.toml",
  "renovate.json",
  "scripts/apply-rulesets.sh",
  "scripts/configure-repo.sh",
  "scripts/setup.sh",
  "tests/__init__.py",
  "tests/test_placeholder.py",
  "uv.lock",
]
`;

exports[`file list snapshots > full config 1`] = `
[
  ".cfnlintrc.yaml",
  ".claude/rules/git-workflow.md",
  ".claude/settings.json",
  ".claude/skills/commit-conventions/SKILL.md",
  ".claude/skills/commit/SKILL.md",
  ".claude/skills/implement/SKILL.md",
  ".claude/skills/lint-rules/SKILL.md",
  ".claude/skills/lint/SKILL.md",
  ".claude/skills/pr/SKILL.md",
  ".claude/skills/review/SKILL.md",
  ".claude/skills/setup/SKILL.md",
  ".claude/skills/ship/SKILL.md",
  ".claude/skills/test/SKILL.md",
  ".commitlintrc.yaml",
  ".devcontainer/Dockerfile",
  ".devcontainer/devcontainer.json",
  ".devcontainer/initialize.sh",
  ".devcontainer/post-create.sh",
  ".dockerignore",
  ".editorconfig",
  ".env.example",
  ".gitattributes",
  ".github/CODEOWNERS",
  ".github/pull_request_template.md",
  ".github/rulesets/protect-main.json",
  ".github/workflows/cd-cdk.yaml",
  ".github/workflows/ci.yaml",
  ".gitignore",
  ".hadolint.yaml",
  ".markdownlint-cli2.yaml",
  ".mcp.json",
  ".mcp.json.example",
  ".mdformat.toml",
  ".mise.toml",
  ".npmrc",
  ".vscode/extensions.json",
  ".vscode/settings.json",
  ".yamlfmt.yaml",
  ".yamllint.yaml",
  "CLAUDE.md",
  "README.md",
  "biome.json",
  "docs/adding-tools.md",
  "docs/branch-strategy.md",
  "infra/bin/app.ts",
  "infra/cdk.json",
  "infra/lib/app-stack.ts",
  "infra/package.json",
  "infra/test/app.test.ts",
  "infra/tsconfig.json",
  "lefthook.yaml",
  "package.json",
  "pnpm-workspace.yaml",
  "pyproject.toml",
  "renovate.json",
  "scripts/apply-rulesets.sh",
  "scripts/configure-repo.sh",
  "scripts/setup.sh",
  "tests/__init__.py",
  "tests/test_placeholder.py",
  "tsconfig.json",
  "uv.lock",
  "web/index.html",
  "web/package.json",
  "web/src/App.css",
  "web/src/App.tsx",
  "web/src/index.ts",
  "web/src/main.tsx",
  "web/src/vite-env.d.ts",
  "web/tests/index.test.ts",
  "web/vite.config.ts",
]
`;

exports[`file list snapshots > gcp + terraform 1`] = `
[
  ".claude/rules/git-workflow.md",
  ".claude/settings.json",
  ".claude/skills/commit-conventions/SKILL.md",
  ".claude/skills/commit/SKILL.md",
  ".claude/skills/implement/SKILL.md",
  ".claude/skills/lint-rules/SKILL.md",
  ".claude/skills/lint/SKILL.md",
  ".claude/skills/pr/SKILL.md",
  ".claude/skills/review/SKILL.md",
  ".claude/skills/setup/SKILL.md",
  ".claude/skills/ship/SKILL.md",
  ".claude/skills/test/SKILL.md",
  ".commitlintrc.yaml",
  ".devcontainer/Dockerfile",
  ".devcontainer/devcontainer.json",
  ".devcontainer/initialize.sh",
  ".devcontainer/post-create.sh",
  ".dockerignore",
  ".editorconfig",
  ".env.example",
  ".gitattributes",
  ".github/CODEOWNERS",
  ".github/pull_request_template.md",
  ".github/rulesets/protect-main.json",
  ".github/workflows/cd-terraform.yaml",
  ".github/workflows/ci.yaml",
  ".gitignore",
  ".hadolint.yaml",
  ".markdownlint-cli2.yaml",
  ".mcp.json",
  ".mcp.json.example",
  ".mdformat.toml",
  ".mise.toml",
  ".npmrc",
  ".tflint.hcl",
  ".vscode/extensions.json",
  ".vscode/settings.json",
  ".yamlfmt.yaml",
  ".yamllint.yaml",
  "CLAUDE.md",
  "README.md",
  "biome.json",
  "docs/adding-tools.md",
  "docs/branch-strategy.md",
  "lefthook.yaml",
  "main.tf",
  "package.json",
  "renovate.json",
  "scripts/apply-rulesets.sh",
  "scripts/configure-repo.sh",
  "scripts/setup.sh",
  "src/index.ts",
  "tests/index.test.ts",
  "tsconfig.json",
]
`;

exports[`file list snapshots > nextjs + express 1`] = `
[
  ".claude/rules/express.md",
  ".claude/rules/git-workflow.md",
  ".claude/settings.json",
  ".claude/skills/commit-conventions/SKILL.md",
  ".claude/skills/commit/SKILL.md",
  ".claude/skills/implement/SKILL.md",
  ".claude/skills/lint-rules/SKILL.md",
  ".claude/skills/lint/SKILL.md",
  ".claude/skills/pr/SKILL.md",
  ".claude/skills/review/SKILL.md",
  ".claude/skills/setup/SKILL.md",
  ".claude/skills/ship/SKILL.md",
  ".claude/skills/test/SKILL.md",
  ".commitlintrc.yaml",
  ".devcontainer/Dockerfile",
  ".devcontainer/devcontainer.json",
  ".devcontainer/initialize.sh",
  ".devcontainer/post-create.sh",
  ".dockerignore",
  ".editorconfig",
  ".env.example",
  ".gitattributes",
  ".github/CODEOWNERS",
  ".github/pull_request_template.md",
  ".github/rulesets/protect-main.json",
  ".github/workflows/ci.yaml",
  ".gitignore",
  ".hadolint.yaml",
  ".markdownlint-cli2.yaml",
  ".mcp.json",
  ".mcp.json.example",
  ".mdformat.toml",
  ".mise.toml",
  ".npmrc",
  ".vscode/extensions.json",
  ".vscode/settings.json",
  ".yamlfmt.yaml",
  ".yamllint.yaml",
  "CLAUDE.md",
  "README.md",
  "api/package.json",
  "api/src/app.ts",
  "api/src/index.ts",
  "api/tests/app.test.ts",
  "api/tsconfig.json",
  "biome.json",
  "docs/adding-tools.md",
  "docs/branch-strategy.md",
  "lefthook.yaml",
  "package.json",
  "pnpm-workspace.yaml",
  "renovate.json",
  "scripts/apply-rulesets.sh",
  "scripts/configure-repo.sh",
  "scripts/setup.sh",
  "tsconfig.json",
  "web/next.config.ts",
  "web/package.json",
  "web/src/app/layout.tsx",
  "web/src/app/page.module.css",
  "web/src/app/page.tsx",
  "web/src/index.ts",
  "web/tests/index.test.ts",
]
`;

exports[`file list snapshots > nextjs + fastapi 1`] = `
[
  ".claude/rules/fastapi.md",
  ".claude/rules/git-workflow.md",
  ".claude/settings.json",
  ".claude/skills/commit-conventions/SKILL.md",
  ".claude/skills/commit/SKILL.md",
  ".claude/skills/implement/SKILL.md",
  ".claude/skills/lint-rules/SKILL.md",
  ".claude/skills/lint/SKILL.md",
  ".claude/skills/pr/SKILL.md",
  ".claude/skills/review/SKILL.md",
  ".claude/skills/setup/SKILL.md",
  ".claude/skills/ship/SKILL.md",
  ".claude/skills/test/SKILL.md",
  ".commitlintrc.yaml",
  ".devcontainer/Dockerfile",
  ".devcontainer/devcontainer.json",
  ".devcontainer/initialize.sh",
  ".devcontainer/post-create.sh",
  ".dockerignore",
  ".editorconfig",
  ".env.example",
  ".gitattributes",
  ".github/CODEOWNERS",
  ".github/pull_request_template.md",
  ".github/rulesets/protect-main.json",
  ".github/workflows/ci.yaml",
  ".gitignore",
  ".hadolint.yaml",
  ".markdownlint-cli2.yaml",
  ".mcp.json",
  ".mcp.json.example",
  ".mdformat.toml",
  ".mise.toml",
  ".npmrc",
  ".vscode/extensions.json",
  ".vscode/settings.json",
  ".yamlfmt.yaml",
  ".yamllint.yaml",
  "CLAUDE.md",
  "README.md",
  "api/pyproject.toml",
  "api/src/__init__.py",
  "api/src/main.py",
  "api/tests/__init__.py",
  "api/tests/test_main.py",
  "biome.json",
  "docs/adding-tools.md",
  "docs/branch-strategy.md",
  "lefthook.yaml",
  "package.json",
  "pnpm-workspace.yaml",
  "pyproject.toml",
  "renovate.json",
  "scripts/apply-rulesets.sh",
  "scripts/configure-repo.sh",
  "scripts/setup.sh",
  "tests/__init__.py",
  "tests/test_placeholder.py",
  "tsconfig.json",
  "uv.lock",
  "web/next.config.ts",
  "web/package.json",
  "web/src/app/layout.tsx",
  "web/src/app/page.module.css",
  "web/src/app/page.tsx",
  "web/src/index.ts",
  "web/tests/index.test.ts",
]
`;

exports[`file list snapshots > nextjs 1`] = `
[
  ".claude/rules/git-workflow.md",
  ".claude/settings.json",
  ".claude/skills/commit-conventions/SKILL.md",
  ".claude/skills/commit/SKILL.md",
  ".claude/skills/implement/SKILL.md",
  ".claude/skills/lint-rules/SKILL.md",
  ".claude/skills/lint/SKILL.md",
  ".claude/skills/pr/SKILL.md",
  ".claude/skills/review/SKILL.md",
  ".claude/skills/setup/SKILL.md",
  ".claude/skills/ship/SKILL.md",
  ".claude/skills/test/SKILL.md",
  ".commitlintrc.yaml",
  ".devcontainer/Dockerfile",
  ".devcontainer/devcontainer.json",
  ".devcontainer/initialize.sh",
  ".devcontainer/post-create.sh",
  ".dockerignore",
  ".editorconfig",
  ".env.example",
  ".gitattributes",
  ".github/CODEOWNERS",
  ".github/pull_request_template.md",
  ".github/rulesets/protect-main.json",
  ".github/workflows/ci.yaml",
  ".gitignore",
  ".hadolint.yaml",
  ".markdownlint-cli2.yaml",
  ".mcp.json",
  ".mcp.json.example",
  ".mdformat.toml",
  ".mise.toml",
  ".npmrc",
  ".vscode/extensions.json",
  ".vscode/settings.json",
  ".yamlfmt.yaml",
  ".yamllint.yaml",
  "CLAUDE.md",
  "README.md",
  "biome.json",
  "docs/adding-tools.md",
  "docs/branch-strategy.md",
  "lefthook.yaml",
  "package.json",
  "pnpm-workspace.yaml",
  "renovate.json",
  "scripts/apply-rulesets.sh",
  "scripts/configure-repo.sh",
  "scripts/setup.sh",
  "tsconfig.json",
  "web/next.config.ts",
  "web/package.json",
  "web/src/app/layout.tsx",
  "web/src/app/page.module.css",
  "web/src/app/page.tsx",
  "web/src/index.ts",
  "web/tests/index.test.ts",
]
`;

exports[`file list snapshots > python + cloudformation 1`] = `
[
  ".cfnlintrc.yaml",
  ".claude/rules/git-workflow.md",
  ".claude/settings.json",
  ".claude/skills/commit-conventions/SKILL.md",
  ".claude/skills/commit/SKILL.md",
  ".claude/skills/implement/SKILL.md",
  ".claude/skills/lint-rules/SKILL.md",
  ".claude/skills/lint/SKILL.md",
  ".claude/skills/pr/SKILL.md",
  ".claude/skills/review/SKILL.md",
  ".claude/skills/setup/SKILL.md",
  ".claude/skills/ship/SKILL.md",
  ".claude/skills/test/SKILL.md",
  ".commitlintrc.yaml",
  ".devcontainer/Dockerfile",
  ".devcontainer/devcontainer.json",
  ".devcontainer/initialize.sh",
  ".devcontainer/post-create.sh",
  ".dockerignore",
  ".editorconfig",
  ".env.example",
  ".gitattributes",
  ".github/CODEOWNERS",
  ".github/pull_request_template.md",
  ".github/rulesets/protect-main.json",
  ".github/workflows/cd-cloudformation.yaml",
  ".github/workflows/ci.yaml",
  ".gitignore",
  ".hadolint.yaml",
  ".markdownlint-cli2.yaml",
  ".mcp.json",
  ".mcp.json.example",
  ".mdformat.toml",
  ".mise.toml",
  ".npmrc",
  ".vscode/extensions.json",
  ".vscode/settings.json",
  ".yamlfmt.yaml",
  ".yamllint.yaml",
  "CLAUDE.md",
  "README.md",
  "docs/adding-tools.md",
  "docs/branch-strategy.md",
  "infra/template.yaml",
  "lefthook.yaml",
  "package.json",
  "pyproject.toml",
  "renovate.json",
  "scripts/apply-rulesets.sh",
  "scripts/configure-repo.sh",
  "scripts/setup.sh",
  "tests/__init__.py",
  "tests/test_placeholder.py",
  "uv.lock",
]
`;

exports[`file list snapshots > python + terraform 1`] = `
[
  ".claude/rules/git-workflow.md",
  ".claude/settings.json",
  ".claude/skills/commit-conventions/SKILL.md",
  ".claude/skills/commit/SKILL.md",
  ".claude/skills/implement/SKILL.md",
  ".claude/skills/lint-rules/SKILL.md",
  ".claude/skills/lint/SKILL.md",
  ".claude/skills/pr/SKILL.md",
  ".claude/skills/review/SKILL.md",
  ".claude/skills/setup/SKILL.md",
  ".claude/skills/ship/SKILL.md",
  ".claude/skills/test/SKILL.md",
  ".commitlintrc.yaml",
  ".devcontainer/Dockerfile",
  ".devcontainer/devcontainer.json",
  ".devcontainer/initialize.sh",
  ".devcontainer/post-create.sh",
  ".dockerignore",
  ".editorconfig",
  ".env.example",
  ".gitattributes",
  ".github/CODEOWNERS",
  ".github/pull_request_template.md",
  ".github/rulesets/protect-main.json",
  ".github/workflows/cd-terraform.yaml",
  ".github/workflows/ci.yaml",
  ".gitignore",
  ".hadolint.yaml",
  ".markdownlint-cli2.yaml",
  ".mcp.json",
  ".mcp.json.example",
  ".mdformat.toml",
  ".mise.toml",
  ".npmrc",
  ".tflint.hcl",
  ".vscode/extensions.json",
  ".vscode/settings.json",
  ".yamlfmt.yaml",
  ".yamllint.yaml",
  "CLAUDE.md",
  "README.md",
  "docs/adding-tools.md",
  "docs/branch-strategy.md",
  "lefthook.yaml",
  "main.tf",
  "package.json",
  "pyproject.toml",
  "renovate.json",
  "scripts/apply-rulesets.sh",
  "scripts/configure-repo.sh",
  "scripts/setup.sh",
  "tests/__init__.py",
  "tests/test_placeholder.py",
  "uv.lock",
]
`;

exports[`file list snapshots > python 1`] = `
[
  ".claude/rules/git-workflow.md",
  ".claude/settings.json",
  ".claude/skills/commit-conventions/SKILL.md",
  ".claude/skills/commit/SKILL.md",
  ".claude/skills/implement/SKILL.md",
  ".claude/skills/lint-rules/SKILL.md",
  ".claude/skills/lint/SKILL.md",
  ".claude/skills/pr/SKILL.md",
  ".claude/skills/review/SKILL.md",
  ".claude/skills/setup/SKILL.md",
  ".claude/skills/ship/SKILL.md",
  ".claude/skills/test/SKILL.md",
  ".commitlintrc.yaml",
  ".devcontainer/Dockerfile",
  ".devcontainer/devcontainer.json",
  ".devcontainer/initialize.sh",
  ".devcontainer/post-create.sh",
  ".dockerignore",
  ".editorconfig",
  ".env.example",
  ".gitattributes",
  ".github/CODEOWNERS",
  ".github/pull_request_template.md",
  ".github/rulesets/protect-main.json",
  ".github/workflows/ci.yaml",
  ".gitignore",
  ".hadolint.yaml",
  ".markdownlint-cli2.yaml",
  ".mcp.json",
  ".mcp.json.example",
  ".mdformat.toml",
  ".mise.toml",
  ".npmrc",
  ".vscode/extensions.json",
  ".vscode/settings.json",
  ".yamlfmt.yaml",
  ".yamllint.yaml",
  "CLAUDE.md",
  "README.md",
  "docs/adding-tools.md",
  "docs/branch-strategy.md",
  "lefthook.yaml",
  "package.json",
  "pyproject.toml",
  "renovate.json",
  "scripts/apply-rulesets.sh",
  "scripts/configure-repo.sh",
  "scripts/setup.sh",
  "tests/__init__.py",
  "tests/test_placeholder.py",
  "uv.lock",
]
`;

exports[`file list snapshots > react + express 1`] = `
[
  ".claude/rules/express.md",
  ".claude/rules/git-workflow.md",
  ".claude/settings.json",
  ".claude/skills/commit-conventions/SKILL.md",
  ".claude/skills/commit/SKILL.md",
  ".claude/skills/implement/SKILL.md",
  ".claude/skills/lint-rules/SKILL.md",
  ".claude/skills/lint/SKILL.md",
  ".claude/skills/pr/SKILL.md",
  ".claude/skills/review/SKILL.md",
  ".claude/skills/setup/SKILL.md",
  ".claude/skills/ship/SKILL.md",
  ".claude/skills/test/SKILL.md",
  ".commitlintrc.yaml",
  ".devcontainer/Dockerfile",
  ".devcontainer/devcontainer.json",
  ".devcontainer/initialize.sh",
  ".devcontainer/post-create.sh",
  ".dockerignore",
  ".editorconfig",
  ".env.example",
  ".gitattributes",
  ".github/CODEOWNERS",
  ".github/pull_request_template.md",
  ".github/rulesets/protect-main.json",
  ".github/workflows/ci.yaml",
  ".gitignore",
  ".hadolint.yaml",
  ".markdownlint-cli2.yaml",
  ".mcp.json",
  ".mcp.json.example",
  ".mdformat.toml",
  ".mise.toml",
  ".npmrc",
  ".vscode/extensions.json",
  ".vscode/settings.json",
  ".yamlfmt.yaml",
  ".yamllint.yaml",
  "CLAUDE.md",
  "README.md",
  "api/package.json",
  "api/src/app.ts",
  "api/src/index.ts",
  "api/tests/app.test.ts",
  "api/tsconfig.json",
  "biome.json",
  "docs/adding-tools.md",
  "docs/branch-strategy.md",
  "lefthook.yaml",
  "package.json",
  "pnpm-workspace.yaml",
  "renovate.json",
  "scripts/apply-rulesets.sh",
  "scripts/configure-repo.sh",
  "scripts/setup.sh",
  "tsconfig.json",
  "web/index.html",
  "web/package.json",
  "web/src/App.css",
  "web/src/App.tsx",
  "web/src/index.ts",
  "web/src/main.tsx",
  "web/src/vite-env.d.ts",
  "web/tests/index.test.ts",
  "web/vite.config.ts",
]
`;

exports[`file list snapshots > react + fastapi 1`] = `
[
  ".claude/rules/fastapi.md",
  ".claude/rules/git-workflow.md",
  ".claude/settings.json",
  ".claude/skills/commit-conventions/SKILL.md",
  ".claude/skills/commit/SKILL.md",
  ".claude/skills/implement/SKILL.md",
  ".claude/skills/lint-rules/SKILL.md",
  ".claude/skills/lint/SKILL.md",
  ".claude/skills/pr/SKILL.md",
  ".claude/skills/review/SKILL.md",
  ".claude/skills/setup/SKILL.md",
  ".claude/skills/ship/SKILL.md",
  ".claude/skills/test/SKILL.md",
  ".commitlintrc.yaml",
  ".devcontainer/Dockerfile",
  ".devcontainer/devcontainer.json",
  ".devcontainer/initialize.sh",
  ".devcontainer/post-create.sh",
  ".dockerignore",
  ".editorconfig",
  ".env.example",
  ".gitattributes",
  ".github/CODEOWNERS",
  ".github/pull_request_template.md",
  ".github/rulesets/protect-main.json",
  ".github/workflows/ci.yaml",
  ".gitignore",
  ".hadolint.yaml",
  ".markdownlint-cli2.yaml",
  ".mcp.json",
  ".mcp.json.example",
  ".mdformat.toml",
  ".mise.toml",
  ".npmrc",
  ".vscode/extensions.json",
  ".vscode/settings.json",
  ".yamlfmt.yaml",
  ".yamllint.yaml",
  "CLAUDE.md",
  "README.md",
  "api/pyproject.toml",
  "api/src/__init__.py",
  "api/src/main.py",
  "api/tests/__init__.py",
  "api/tests/test_main.py",
  "biome.json",
  "docs/adding-tools.md",
  "docs/branch-strategy.md",
  "lefthook.yaml",
  "package.json",
  "pnpm-workspace.yaml",
  "pyproject.toml",
  "renovate.json",
  "scripts/apply-rulesets.sh",
  "scripts/configure-repo.sh",
  "scripts/setup.sh",
  "tests/__init__.py",
  "tests/test_placeholder.py",
  "tsconfig.json",
  "uv.lock",
  "web/index.html",
  "web/package.json",
  "web/src/App.css",
  "web/src/App.tsx",
  "web/src/index.ts",
  "web/src/main.tsx",
  "web/src/vite-env.d.ts",
  "web/tests/index.test.ts",
  "web/vite.config.ts",
]
`;

exports[`file list snapshots > react 1`] = `
[
  ".claude/rules/git-workflow.md",
  ".claude/settings.json",
  ".claude/skills/commit-conventions/SKILL.md",
  ".claude/skills/commit/SKILL.md",
  ".claude/skills/implement/SKILL.md",
  ".claude/skills/lint-rules/SKILL.md",
  ".claude/skills/lint/SKILL.md",
  ".claude/skills/pr/SKILL.md",
  ".claude/skills/review/SKILL.md",
  ".claude/skills/setup/SKILL.md",
  ".claude/skills/ship/SKILL.md",
  ".claude/skills/test/SKILL.md",
  ".commitlintrc.yaml",
  ".devcontainer/Dockerfile",
  ".devcontainer/devcontainer.json",
  ".devcontainer/initialize.sh",
  ".devcontainer/post-create.sh",
  ".dockerignore",
  ".editorconfig",
  ".env.example",
  ".gitattributes",
  ".github/CODEOWNERS",
  ".github/pull_request_template.md",
  ".github/rulesets/protect-main.json",
  ".github/workflows/ci.yaml",
  ".gitignore",
  ".hadolint.yaml",
  ".markdownlint-cli2.yaml",
  ".mcp.json",
  ".mcp.json.example",
  ".mdformat.toml",
  ".mise.toml",
  ".npmrc",
  ".vscode/extensions.json",
  ".vscode/settings.json",
  ".yamlfmt.yaml",
  ".yamllint.yaml",
  "CLAUDE.md",
  "README.md",
  "biome.json",
  "docs/adding-tools.md",
  "docs/branch-strategy.md",
  "lefthook.yaml",
  "package.json",
  "pnpm-workspace.yaml",
  "renovate.json",
  "scripts/apply-rulesets.sh",
  "scripts/configure-repo.sh",
  "scripts/setup.sh",
  "tsconfig.json",
  "web/index.html",
  "web/package.json",
  "web/src/App.css",
  "web/src/App.tsx",
  "web/src/index.ts",
  "web/src/main.tsx",
  "web/src/vite-env.d.ts",
  "web/tests/index.test.ts",
  "web/vite.config.ts",
]
`;

exports[`file list snapshots > terraform (ts) 1`] = `
[
  ".claude/rules/git-workflow.md",
  ".claude/settings.json",
  ".claude/skills/commit-conventions/SKILL.md",
  ".claude/skills/commit/SKILL.md",
  ".claude/skills/implement/SKILL.md",
  ".claude/skills/lint-rules/SKILL.md",
  ".claude/skills/lint/SKILL.md",
  ".claude/skills/pr/SKILL.md",
  ".claude/skills/review/SKILL.md",
  ".claude/skills/setup/SKILL.md",
  ".claude/skills/ship/SKILL.md",
  ".claude/skills/test/SKILL.md",
  ".commitlintrc.yaml",
  ".devcontainer/Dockerfile",
  ".devcontainer/devcontainer.json",
  ".devcontainer/initialize.sh",
  ".devcontainer/post-create.sh",
  ".dockerignore",
  ".editorconfig",
  ".env.example",
  ".gitattributes",
  ".github/CODEOWNERS",
  ".github/pull_request_template.md",
  ".github/rulesets/protect-main.json",
  ".github/workflows/cd-terraform.yaml",
  ".github/workflows/ci.yaml",
  ".gitignore",
  ".hadolint.yaml",
  ".markdownlint-cli2.yaml",
  ".mcp.json",
  ".mcp.json.example",
  ".mdformat.toml",
  ".mise.toml",
  ".npmrc",
  ".tflint.hcl",
  ".vscode/extensions.json",
  ".vscode/settings.json",
  ".yamlfmt.yaml",
  ".yamllint.yaml",
  "CLAUDE.md",
  "README.md",
  "biome.json",
  "docs/adding-tools.md",
  "docs/branch-strategy.md",
  "lefthook.yaml",
  "main.tf",
  "package.json",
  "renovate.json",
  "scripts/apply-rulesets.sh",
  "scripts/configure-repo.sh",
  "scripts/setup.sh",
  "src/index.ts",
  "tests/index.test.ts",
  "tsconfig.json",
]
`;

exports[`file list snapshots > typescript + python 1`] = `
[
  ".claude/rules/git-workflow.md",
  ".claude/settings.json",
  ".claude/skills/commit-conventions/SKILL.md",
  ".claude/skills/commit/SKILL.md",
  ".claude/skills/implement/SKILL.md",
  ".claude/skills/lint-rules/SKILL.md",
  ".claude/skills/lint/SKILL.md",
  ".claude/skills/pr/SKILL.md",
  ".claude/skills/review/SKILL.md",
  ".claude/skills/setup/SKILL.md",
  ".claude/skills/ship/SKILL.md",
  ".claude/skills/test/SKILL.md",
  ".commitlintrc.yaml",
  ".devcontainer/Dockerfile",
  ".devcontainer/devcontainer.json",
  ".devcontainer/initialize.sh",
  ".devcontainer/post-create.sh",
  ".dockerignore",
  ".editorconfig",
  ".env.example",
  ".gitattributes",
  ".github/CODEOWNERS",
  ".github/pull_request_template.md",
  ".github/rulesets/protect-main.json",
  ".github/workflows/ci.yaml",
  ".gitignore",
  ".hadolint.yaml",
  ".markdownlint-cli2.yaml",
  ".mcp.json",
  ".mcp.json.example",
  ".mdformat.toml",
  ".mise.toml",
  ".npmrc",
  ".vscode/extensions.json",
  ".vscode/settings.json",
  ".yamlfmt.yaml",
  ".yamllint.yaml",
  "CLAUDE.md",
  "README.md",
  "biome.json",
  "docs/adding-tools.md",
  "docs/branch-strategy.md",
  "lefthook.yaml",
  "package.json",
  "pyproject.toml",
  "renovate.json",
  "scripts/apply-rulesets.sh",
  "scripts/configure-repo.sh",
  "scripts/setup.sh",
  "src/index.ts",
  "tests/__init__.py",
  "tests/index.test.ts",
  "tests/test_placeholder.py",
  "tsconfig.json",
  "uv.lock",
]
`;

exports[`file list snapshots > typescript 1`] = `
[
  ".claude/rules/git-workflow.md",
  ".claude/settings.json",
  ".claude/skills/commit-conventions/SKILL.md",
  ".claude/skills/commit/SKILL.md",
  ".claude/skills/implement/SKILL.md",
  ".claude/skills/lint-rules/SKILL.md",
  ".claude/skills/lint/SKILL.md",
  ".claude/skills/pr/SKILL.md",
  ".claude/skills/review/SKILL.md",
  ".claude/skills/setup/SKILL.md",
  ".claude/skills/ship/SKILL.md",
  ".claude/skills/test/SKILL.md",
  ".commitlintrc.yaml",
  ".devcontainer/Dockerfile",
  ".devcontainer/devcontainer.json",
  ".devcontainer/initialize.sh",
  ".devcontainer/post-create.sh",
  ".dockerignore",
  ".editorconfig",
  ".env.example",
  ".gitattributes",
  ".github/CODEOWNERS",
  ".github/pull_request_template.md",
  ".github/rulesets/protect-main.json",
  ".github/workflows/ci.yaml",
  ".gitignore",
  ".hadolint.yaml",
  ".markdownlint-cli2.yaml",
  ".mcp.json",
  ".mcp.json.example",
  ".mdformat.toml",
  ".mise.toml",
  ".npmrc",
  ".vscode/extensions.json",
  ".vscode/settings.json",
  ".yamlfmt.yaml",
  ".yamllint.yaml",
  "CLAUDE.md",
  "README.md",
  "biome.json",
  "docs/adding-tools.md",
  "docs/branch-strategy.md",
  "lefthook.yaml",
  "package.json",
  "renovate.json",
  "scripts/apply-rulesets.sh",
  "scripts/configure-repo.sh",
  "scripts/setup.sh",
  "src/index.ts",
  "tests/index.test.ts",
  "tsconfig.json",
]
`;
